fixed x spacing in li

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,13 @@
     background-color: blue;
 }*/
 
-li {
-    list-style: none;
+
+/* css styles from app.js */
+.collection-item {
+    list-style: none;    
 }
 
+i {
+    margin-left: 20px;
+}
+/* end of css styles from app.js */
